@@ -190,7 +190,7 @@ public abstract class BinaryOperatorTestBase<S extends Function, IN, OUT> extend
 		this.driver = driver;
 		driver.setup(this);
 		
-		this.stub = (S) stubClass.newInstance();
+		this.stub = (S) stubClass.getDeclaredConstructor().newInstance();
 		
 		// regular running logic
 		this.running = true;
