@@ -121,7 +121,7 @@ public abstract class TaskTestBase extends TestLogger {
 	{
 		DelimitedInputFormat<Record> format;
 		try {
-			format = stubClass.newInstance();
+			format = stubClass.getDeclaredConstructor().newInstance();
 		}
 		catch (Throwable t) {
 			throw new RuntimeException("Could not instantiate test input format.", t);
