@@ -444,7 +444,7 @@ public class PojoSerializerUpgradeTest extends TestLogger {
 
 		@Override
 		public Long map(Long value) throws Exception {
-			Object pojo = pojoClass.newInstance();
+			Object pojo = pojoClass.getDeclaredConstructor().newInstance();
 
 			fieldA.set(pojo, value);
 
